[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://chat/chat.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://intro.tscn" type="PackedScene" id=4]
[ext_resource path="res://report.tscn" type="PackedScene" id=5]
[ext_resource path="res://outro.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/office.ogg" type="AudioStream" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Chat" parent="." instance=ExtResource( 2 )]

[node name="Outro" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Intro" parent="." instance=ExtResource( 4 )]

[node name="Report" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AudioBackground" type="AudioStreamPlayer" parent="Report"]
stream = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Report/AudioBackground"]

[connection signal="report_pressed" from="Chat" to="." method="_on_Chat_report_pressed"]
[connection signal="faded" from="Intro" to="." method="_on_Intro_faded"]
[connection signal="pressed" from="Intro" to="." method="_on_Intro_pressed"]
[connection signal="answer_added" from="Report" to="." method="_on_Report_answer_added"]
[connection signal="back_pressed" from="Report" to="." method="_on_Report_back_pressed"]
[connection signal="report_filled" from="Report" to="." method="_on_Report_report_filled"]
[connection signal="visibility_changed" from="Report" to="." method="_on_Report_visibility_changed"]
[connection signal="tween_all_completed" from="Report/AudioBackground/Tween" to="." method="_on_Tween_tween_all_completed"]

[editable path="Chat"]
